# Cordant

task-dependency-service-task-dependency-service/: .env.example  .gitignore  README.md  TASK.md  docker-compose.yml  pyproject.toml  pytest.ini
task-dependency-service-task-dependency-service/app/: cache.py  config.py  db.py  ingestion.py  main.py  models.py  repositories.py  services.py
task-dependency-service-task-dependency-service/app/routes/: tasks.py
task-dependency-service-task-dependency-service/scripts/: produce_task_event.py  produce_task_events.py
task-dependency-service-task-dependency-service/tests/: __init__.py  conftest.py
task-dependency-service-task-dependency-service/tests/helpers/: __init__.py  api_client.py  kafka_producer.py  metrics.py  mongo_test_client.py  polling.py  redis_test_client.py  task_factory.py
task-dependency-service-task-dependency-service/tests/integration/: __init__.py  test_bad_task_data_matrix.py  test_cache_performance.py  test_kafka_ingestion_e2e.py  test_mongo_repository.py  test_redis_cache.py  test_tasks_api_real.py
task-dependency-service-task-dependency-service/tests/stress/: __init__.py  test_continuous_kafka_ingestion.py  test_get_latency_during_burst.py  test_kafka_burst_ingestion.py  test_long_and_over_limit_chains.py
task-dependency-service-task-dependency-service/tests/unit/: __init__.py  test_dependency_chain_service.py
